tests/snapshots/code_text_fallback_param__code_text_fallback_Sample_tsx_detailed.snap
---
source: tests/code_text_fallback_param.rs
assertion_line: 80
expression: out
---
import React from 'react';
… 1 more lines …
… 3 more lines …
}
… 5 more lines …

… 8 more lines …
