tests/snapshots/code_text_fallback_param__code_text_fallback_Sample_tsx_detailed_combined.snap
---
source: tests/code_text_fallback_param.rs
expression: snap
---
STDOUT:
 1: import React from 'react';
 2: 
 3: type Props = { name: string };
23: 
24:   return (
34:   );
35: }
36: 

DEBUG (normalized):
{
  "budgets_effective": {
    "bytes": 120,
    "chars": null,
    "lines": null
  },
  "counts": {
    "included": 0,
    "omitted_children": 7,
    "total_nodes": 0
  },
  "output_stats": {
    "bytes": 111,
    "chars": 0,
    "lines": 9
  },
  "renderer": {
    "array_sampler": "default",
    "prefer_tail_arrays": false,
    "style": "detailed",
    "template": "code"
  },
  "root": {
    "children": [
      {
        "children": [
          {
            "atomic_token": "import React from 'react';",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 0,
        "kind": "array",
        "metrics": {
          "array_len": 1
        }
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 1,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 1,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 1
      },
      {
        "children": [
          {
            "atomic_token": "type Props = { name: string };",
            "id": 0,
            "index_in_parent_array": 2,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 2,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 2
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 22,
            "kind": "string",
            "metrics": {}
          },
          {
            "children": [
              {
                "atomic_token": "  return (",
                "id": 0,
                "index_in_parent_array": 23,
                "kind": "string",
                "metrics": {}
              },
              {
                "id": 0,
                "index_in_parent_array": 32,
                "kind": "array",
                "metrics": {
                  "array_len": 1
                }
              }
            ],
            "gaps": [
              {
                "before_child_index": 1,
                "omitted_count": 8
              }
            ],
            "id": 0,
            "index_in_parent_array": 23,
            "kind": "array",
            "metrics": {
              "array_len": 3
            },
            "omitted_before": 23
          },
          {
            "children": [
              {
                "atomic_token": "  );",
                "id": 0,
                "index_in_parent_array": 33,
                "kind": "string",
                "metrics": {}
              }
            ],
            "id": 0,
            "index_in_parent_array": 33,
            "kind": "array",
            "metrics": {
              "array_len": 1
            },
            "omitted_before": 33
          }
        ],
        "gaps": [
          {
            "before_child_index": 2,
            "omitted_count": 9
          }
        ],
        "id": 0,
        "index_in_parent_array": 9,
        "kind": "array",
        "metrics": {
          "array_len": 3
        },
        "omitted_before": 22
      },
      {
        "children": [
          {
            "atomic_token": "}",
            "id": 0,
            "index_in_parent_array": 34,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 10,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 34
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 35,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 11,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 35
      }
    ],
    "gaps": [
      {
        "before_child_index": 3,
        "omitted_count": 6
      }
    ],
    "id": 0,
    "kind": "array",
    "metrics": {
      "array_len": 12
    }
  },
  "selection": {
    "top_k": 18
  },
  "template": "code"
}
