tests/snapshots/code_text_fallback_param__code_text_fallback_Sample_tsx_stdout.snap
---
source: tests/code_text_fallback_param.rs
assertion_line: 142
expression: out_default
---
 1: import React from 'react';
 2: 
 3: type Props = { name: string };
24:   return (
34:   );
35: }
36:
