tests/snapshots/code_text_fallback_param__code_text_fallback_Sample_tsx_strict_combined.snap
---
source: tests/code_text_fallback_param.rs
expression: snap
---
STDOUT:
 1: import React from 'react';
 2: 
 5: function Item({ i }: { i: number }) {
 7: }
 8: 
35: }
36: 

DEBUG (normalized):
{
  "budgets_effective": {
    "bytes": 120,
    "chars": null,
    "lines": null
  },
  "counts": {
    "included": 0,
    "omitted_children": 5,
    "total_nodes": 0
  },
  "output_stats": {
    "bytes": 100,
    "chars": 0,
    "lines": 8
  },
  "renderer": {
    "array_sampler": "default",
    "prefer_tail_arrays": false,
    "style": "strict",
    "template": "code"
  },
  "root": {
    "children": [
      {
        "children": [
          {
            "atomic_token": "import React from 'react';",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 0,
        "kind": "array",
        "metrics": {
          "array_len": 1
        }
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 1,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 1,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 1
      },
      {
        "children": [
          {
            "atomic_token": "function Item({ i }: { i: number }) {",
            "id": 0,
            "index_in_parent_array": 4,
            "kind": "string",
            "metrics": {}
          },
          {
            "id": 0,
            "index_in_parent_array": 5,
            "kind": "array",
            "metrics": {
              "array_len": 1
            }
          }
        ],
        "id": 0,
        "index_in_parent_array": 4,
        "kind": "array",
        "metrics": {
          "array_len": 2
        },
        "omitted_before": 4
      },
      {
        "children": [
          {
            "atomic_token": "}",
            "id": 0,
            "index_in_parent_array": 6,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 5,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 6
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 7,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 6,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 7
      },
      {
        "children": [
          {
            "atomic_token": "}",
            "id": 0,
            "index_in_parent_array": 34,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 10,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 34
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 35,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 11,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 35
      }
    ],
    "gaps": [
      {
        "before_child_index": 2,
        "omitted_count": 2
      },
      {
        "before_child_index": 5,
        "omitted_count": 3
      }
    ],
    "id": 0,
    "kind": "array",
    "metrics": {
      "array_len": 12
    }
  },
  "selection": {
    "top_k": 16
  },
  "template": "code"
}
